<resources>
    <string name="app_name">Aplikasi Lomba</string>
    <string name="disktipsiLomba">Sebenarnya untuk syarat dan ketentuan lengkapnya dalam lomba ini, kalian bisa klik disini akan tetapi sebagai penjelas yang dipergunakan sebagai gambaran berikut mimin juga akan sertakan ketentuanya secara umum. Syarat dan Ketentuan Olimpiade Biologi SMA/SMK/MA/Sederajat Nasional 2019 di UGM Peserta yang busa mendaftar dalam lomba ini adalah palajar di Indonesia Pelajar yang dimaksudkan adalah pelajar SMA/MA/SMK/Sederajat yang bisa berasal dari sekolah swasta ataupun sekolah negari Dalam lomba ini sendiri setiap pendaftar haruslah dilakukan secara tim Tim dalam anggota Olimpiade Biologi SMA/SMK/MA/Sederajat Nasional 2019 di UGM ini berjumlah 3 Sedangkan deadline akhir setelah diperpanjang dalam event ini maka dapat dilakukan sampai dengan tanggal 7 September tahun 2019 Keputusan pemenang dalam lomba tidak dapat dianggu gugat Jangan lupa baca juga ya jadwal lomba 2019 Hadiah Olimpiade Biologi SMA/SMK/MA/Sederajat Nasional 2019 di UGM Hadiah yang diberikan kepada setiap pemenang dalam lomba totalnya adalah jutaan rupiah Line : @moc7072t Instagram : biosphere_ugm Twitter : @BIOSPHERE_2</string>
    <string name="judulLomba">Olimpiade Biologi SMA/SMK/MA/Sederajat Nasional 2019 di UGM</string>
    <string name="kategori">Kategori</string>
    <string name="terbaru">Terbaru</string>
    <string name="poster_lomba">Poster Lomba</string>
    <string name="detail">Detail</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="hadiah">Hadiah</string>
    <string name="nama">Nur Rohman</string>
    <string name="status">Mahasiswa Universitas Gadjah Mada</string>
    <string name="email">Email : nurrohman2018@mail.ugm.ac.id</string>
    <string name="lomba_disimpan">Lomba Disimpan</string>
    <string name="menampilkan_kategori">Menampilkan Kategori</string>
    <string name="judul_lomba">Judul Lomba Terbaru</string>
    <string name="diskripsi_lomba">Diskripsi Lomba</string>
</resources>
