<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:layout_width="122dp"
            android:layout_height="122dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_profile" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nama"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="#5E6467"
            android:gravity="center"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#5E6467"
            android:gravity="center"
            android:textSize="15sp" />
        </LinearLayout>
        <TextView
            style="@style/titleContent"
            android:text="@string/lomba_disimpan"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="@dimen/recyclerview_margin"
            android:layout_marginBottom="?attr/actionBarSize"
            android:id="@+id/rv_disimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>